--- a/app/globals.css
+++ b/app/globals.css
@@ -38,7 +38,7 @@ body {
     --card-foreground: 240 10% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
-    --primary: 240 5.9% 10%;
+    --primary: 213, 100%, 50%, 1;
     --primary-foreground: 0 0% 98%;
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
@@ -96,73 +96,53 @@ body {
   body {
     @apply bg-background text-foreground;
   }
-}
-
-/* Navbar Toggler */
-input#nav-toggle:checked ~ label#show-button {
-  @apply hidden;
-}
-
-input#nav-toggle:checked ~ label#hide-button {
-  @apply flex lg:hidden;
-}
-
-input#nav-toggle:checked ~ #nav-menu {
-  @apply block lg:flex;
-}
-
-/* Header Styling */
-.header {
-  @apply sticky top-0 z-50 bg-white py-6 transition-all duration-300 lg:bg-transparent;
-
-  &-sticky {
-    @apply bg-white shadow;
+  .container {
+    @apply !mx-auto !max-w-[1202px] !px-3;
   }
-}
-
-/* Navbar Styling */
-.navbar {
-  @apply relative flex flex-wrap items-center justify-between;
-}
-
-.navbar-brand {
-  @apply text-xl font-semibold text-black;
-
-  image {
-    @apply max-h-full max-w-full;
+  .bg-gradient-default {
+    background-image: linear-gradient(90deg, #01AEFF 0%, #016CFF 100%);
   }
-}
+  .btn {
+    @apply inline-block max-h-[52px] px-8 py-2 text-sm font-medium leading-[36px] transition-all duration-200;
+  }
 
-.navbar-nav {
-  @apply text-center lg:text-left;
-}
+  .btn-primary {
+    @apply cursor-pointer rounded-[50px] border-0 bg-gradient-to-tl text-center font-medium text-white hover:shadow-[0px_5px_30px_rgba(252,167,111,0.5)];
+  }
 
-/* Navbar Link Styling */
-.nav-link {
-  @apply block p-3 py-2 text-[15px] text-black transition hover:text-primary md:px-2 lg:inline-block;
-
-  &.active {
-    @apply relative;
-
-    &::after {
-      @apply absolute bottom-0 left-2 right-2 h-0.5 bg-gradient-to-tl content-[''];
+  .btn-outline-primary {
+    @apply relative rounded-[50px] border-primary bg-transparent text-center capitalize text-dark hover:bg-primary hover:text-white hover:shadow-[0px_5px_30px_rgba(252,167,111,0.5)] hover:before:opacity-100 py-[7px];
+    &::before {
+      @apply absolute left-0 top-0 bottom-0 right-0 -z-[1] rounded-[inherit] bg-gradient-to-tl opacity-0 transition-[inherit] content-[""];
     }
   }
-}
 
-/* Dropdown Styling */
-.nav-dropdown {
-  @apply mr-0;
-}
+  .btn-outline-white {
+    @apply rounded-[50px] bg-transparent text-center capitalize text-dark;
+  }
 
-.nav-dropdown-list {
-  @apply z-10 mx-auto ml-1 mt-4 min-w-[180px] rounded-lg border-0 border-solid border-primary/25 bg-primary/5 px-4 py-3 shadow-sm duration-300 lg:mt-0 lg:border lg:bg-white lg:shadow-[0_0.9rem_1.56rem_rgb(0,0,0,0.1)];
-}
+  .btn-white {
+    @apply min-w-[150px] rounded-[50px] border-white bg-white text-center capitalize text-dark shadow-lg hover:shadow;
+  }
+  .btn-blue {
+    @apply min-w-[150px] rounded-xl bg-gradient-to-br from-[#01ABFF] via-[#01ABFF] to-[#0068FF] hover:bg-gradient-to-br hover:from-[#0068FF] hover:to-[#01ABFF] text-center capitalize text-white shadow-lg hover:shadow;
+  }
 
-.nav-dropdown-item {
-  @apply mb-1;
+  .btn-sm {
+    @apply h-[42px] leading-[24px];
+  }
 }
+@layer components {
 
-.nav-dropdown-link {
-  @apply min-w-[150px] py-1 text-sm font-medium text-black transition hover:text-primary;
+  .nav-dropdown-list {
+    @apply hidden md:grid min-w-[200px] gap-5 md:min-w-[220px] md:grid-cols-1 z-10 mx-auto rounded-lg bg-primary/5 px-4 py-3 shadow-sm duration-300 lg:shadow-[0_0.9rem_1.56rem_rgba(0,0,0,0.1)];
+  }
+
+  .nav-dropdown-item {
+    @apply hover:text-primary text-sm font-medium leading-[18px];
+  }
+
+  .nav-dropdown-link {
+    @apply min-w-[150px] py-1 text-sm font-medium text-black transition hover:text-primary;
+  }
 }
